<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_Main">

    <ImageView
        android:id="@+id/cover_logo"
        android:layout_width="412dp"
        android:layout_height="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover_logo" />

    <ImageView
        android:id="@+id/img_bot"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_vs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_vs"
        app:layout_constraintTop_toTopOf="@+id/txt_vs"
        app:srcCompat="@drawable/paper_right" />

    <ImageView
        android:id="@+id/img_Me"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_vs"
        app:layout_constraintEnd_toStartOf="@+id/txt_vs"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_vs"
        app:srcCompat="@drawable/rock"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/txt_VS1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/header_txt_pageMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/header_logo_txt1"
        android:textColor="#EBD81B60"
        android:textSize="14sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toTopOf="@+id/txt_vs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score_Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/scoreMe"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toTopOf="@+id/img_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="120dp"
        android:text="@string/scoreAI"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toTopOf="@+id/img_Me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="clickStart"
        android:text="@string/button_start"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_vs"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btn_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="80dp"
        android:onClick="clickRock"
        android:text="@string/button_rock"
        android:textColor="#8E24AA"
        android:textSize="16sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_scissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Me"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btn_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="clickScissors"
        android:text="@string/button_scissors"
        android:textColor="#FB8C00"
        android:textSize="16sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_paper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_rock"
        app:layout_constraintTop_toBottomOf="@+id/img_Me"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btn_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="clickPaper"
        android:text="@string/button_paper"
        android:textColor="#D81B60"
        android:textSize="16sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_scissors"
        app:layout_constraintTop_toBottomOf="@+id/img_bot"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btn_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="25dp"
        android:text="@string/button_random"
        android:textColor="#00897B"
        android:textSize="20sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_scissors"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="clickRandom"
        />

    <TextView
        android:id="@+id/scAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:text="0"
        android:textColor="#0021FF"
        android:textSize="40sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toTopOf="@+id/img_Me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_bot"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="0"
        android:textColor="#0026FF"
        android:textSize="40sp"
        app:fontFamily="@font/press_start_2p"
        app:layout_constraintBottom_toTopOf="@+id/img_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_Me"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

